src/test/deca/context/invalid/print_boolean.deca
// Description:
//    Tester quand deux print les booleans
//
// Resultats:
//    mismatched input
//
// Historique:
//    cree le 01/01/2023

{
         println(print());

}